fix linklogo alignment

--- a/app/common/components/organisms/Navbar/Navbar.scss
+++ b/app/common/components/organisms/Navbar/Navbar.scss
@@ -34,6 +34,10 @@
     }
   }
 
+  &__linklogo {
+    display: flex;
+  }
+
   &__menu {
     @include media(tablet) {
       height: 95vh;
